--- a/sso-front/pom.xml
+++ b/sso-front/pom.xml
@@ -3,13 +3,13 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
-    <groupId>com.soso</groupId>
-    <artifactId>product1</artifactId>
+    <groupId>com.promotion</groupId>
+    <artifactId>promotion</artifactId>
     <version>0.0.1-SNAPSHOT</version>
     <packaging>jar</packaging>
 
-    <name>product1</name>
-    <description>The first product</description>
+    <name>promotion</name>
+    <description>Demo project for Spring Boot</description>
 
     <parent>
         <groupId>org.springframework.boot</groupId>
@@ -119,7 +119,7 @@
 
 
     <build>
-        <finalName>sso</finalName>
+        <finalName>promotion</finalName>
         <plugins>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
