--- a/sso-front/src/main/resources/application.properties
+++ b/sso-front/src/main/resources/application.properties
@@ -1,3 +1,5 @@
 spring.profiles.active=test
 server.servlet.context-path=/sso
 server.port: 8081
+spring.mvc.view.prefix=/WEB-INF/
+spring.mvc.view.suffix=.jsp
