--- a/sso-front/pom.xml
+++ b/sso-front/pom.xml
@@ -119,6 +119,7 @@
             <groupId>org.projectlombok</groupId>
             <artifactId>lombok</artifactId>
         </dependency>
+        <!-- https://mvnrepository.com/artifact/com.github.pagehelper/pagehelper-spring-boot-starter -->
         <dependency>
             <groupId>com.github.pagehelper</groupId>
             <artifactId>pagehelper-spring-boot-starter</artifactId>
@@ -148,7 +149,7 @@
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-maven-plugin</artifactId>
                 <configuration>
-                    <mainClass>com.soso.product1.Springboot1Application</mainClass>
+                    <mainClass>com.promotion.product.SpringbootApplication</mainClass>
                 </configuration>
                 <executions>
                     <execution>
