--- a/sso-front/src/main/resources/application.properties
+++ b/sso-front/src/main/resources/application.properties
@@ -5,3 +5,6 @@ spring.mvc.view.prefix=/WEB-INF/
 spring.mvc.view.suffix=.jsp
 
 pagehelper.reasonable=true
+
+spring.jackson.date-format=yyyy-MM-dd HH:mm:ss
+spring.jackson.time-zone=GMT+8
