--- a/sso-front/pom.xml
+++ b/sso-front/pom.xml
@@ -151,6 +151,12 @@
             <artifactId>poi-ooxml</artifactId>
             <version>3.13</version>
         </dependency>
+
+        <dependency>
+            <groupId>com.google.guava</groupId>
+            <artifactId>guava</artifactId>
+            <version>18.0</version>
+        </dependency>
     </dependencies>
 
     <build>
