--- a/sso-front/src/main/resources/application-test.yml
+++ b/sso-front/src/main/resources/application-test.yml
@@ -6,14 +6,26 @@
 
 spring:
   datasource:
-    type: com.mchange.v2.c3p0.ComboPooledDataSource
-    driver-class-name: com.mysql.jdbc.Driver
-    url: jdbc:mysql://127.0.0.1:3306/test?useUnicode=true&characterEncoding=utf-8&useSSL=false&serverTimezone=UTC
-    username: root
-    password: 12345678
-    initialSize: 3
-    maxActive: 100
-    minIdle: 10
-    maxWait: 5000
+#    ds1: #数据源1
+      type: com.mchange.v2.c3p0.ComboPooledDataSource
+      driver-class-name: com.mysql.jdbc.Driver
+      url: jdbc:mysql://192.168.2.131:3306/test?useUnicode=true&characterEncoding=utf-8&useSSL=false&serverTimezone=UTC
+      username: root
+      password: 12345678
+      initialSize: 3
+      maxActive: 100
+      minIdle: 10
+      maxWait: 5000
+
+#     ds2: # 数据源2
+#       type: com.mchange.v2.c3p0.ComboPooledDataSource
+#       driver-class-name: com.mysql.jdbc.Driver
+#       url: jdbc:mysql://127.0.0.1:3306/test?useUnicode=true&characterEncoding=utf-8&useSSL=false&serverTimezone=UTC
+#       username: root
+#       password: 12345678
+#       initialSize: 3
+#       maxActive: 100
+#       minIdle: 10
+#       maxWait: 5000
 
 
