--- a/sso-front/src/main/resources/application-test.yml
+++ b/sso-front/src/main/resources/application-test.yml
@@ -20,7 +20,7 @@ spring:
     ds2:
       type: com.mchange.v2.c3p0.ComboPooledDataSource
       driver-class-name: com.mysql.jdbc.Driver
-      jdbc-url: jdbc:mysql://47.92.35.78:3306/test?useUnicode=true&characterEncoding=utf-8&useSSL=false&serverTimezone=UTC
+      jdbc-url: jdbc:mysql://47.92.35.78:3306/finebi_dw?useUnicode=true&characterEncoding=utf-8&useSSL=false&serverTimezone=UTC&allowPublicKeyRetrieval=true
       username: YUKUCONNECT
       password: 012345
       initialSize: 3
