--- a/sso-front/src/main/resources/application-test.yml
+++ b/sso-front/src/main/resources/application-test.yml
@@ -9,7 +9,7 @@ spring:
     ds1:
       type: com.mchange.v2.c3p0.ComboPooledDataSource
       driver-class-name: com.mysql.cj.jdbc.Driver
-      jdbc-url: jdbc:mysql://192.168.2.131:3306/test?useUnicode=true&characterEncoding=utf-8&useSSL=false&serverTimezone=UTC
+      jdbc-url: jdbc:mysql://192.168.2.131:3306/test?useUnicode=true&characterEncoding=utf-8&useSSL=false&serverTimezone=GMT%2B8
       username: root
       password: 12345678
       initialSize: 3
@@ -20,7 +20,7 @@ spring:
     ds2:
       type: com.mchange.v2.c3p0.ComboPooledDataSource
       driver-class-name: com.mysql.cj.jdbc.Driver
-      jdbc-url: jdbc:mysql://47.92.35.78:3306/finebi_dw?zeroDateTimeBehavior=convertToNull&useSSL=true&serverTimezone=Asia/Shanghai&useUnicode=true&characterEncoding=utf-8&allowMultiQueries=true
+      jdbc-url: jdbc:mysql://47.92.35.78:3306/finebi_dw?zeroDateTimeBehavior=convertToNull&useSSL=true&serverTimezone=GMT%2B8&useUnicode=true&characterEncoding=utf-8&allowMultiQueries=true
       username: YUKUCONNECT
       password: 012345
       initialSize: 3
