--- a/sso-front/src/main/resources/application-test.yml
+++ b/sso-front/src/main/resources/application-test.yml
@@ -21,8 +21,8 @@ spring:
       type: com.mchange.v2.c3p0.ComboPooledDataSource
       driver-class-name: com.mysql.cj.jdbc.Driver
       jdbc-url: jdbc:mysql://47.92.35.78:3306/finebi_dw?zeroDateTimeBehavior=convertToNull&useSSL=true&serverTimezone=GMT%2B8&useUnicode=true&characterEncoding=utf-8&allowMultiQueries=true
-      username: YUKUCONNECT
-      password: 012345
+      username: root
+      password: YkBiTest_191106
       initialSize: 3
       maxActive: 100
       minIdle: 10
