--- a/sso-front/src/main/resources/application.properties
+++ b/sso-front/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 spring.profiles.active=test
-server.servlet.context-path=/sso
+server.servlet.context-path=/promotion
 server.port: 8081
 spring.mvc.view.prefix=/WEB-INF/
 spring.mvc.view.suffix=.jsp
