--- a/sso-front/src/main/resources/application.properties
+++ b/sso-front/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-spring.profiles.active=test
+spring.profiles.active=prod
 server.servlet.context-path=/promotion
 server.port: 8081
 spring.mvc.view.prefix=/WEB-INF/
