--- a/sso-front/pom.xml
+++ b/sso-front/pom.xml
@@ -164,6 +164,19 @@
             <version>18.0</version>
         </dependency>
 
+        <dependency>
+            <groupId>org.apache.httpcomponents</groupId>
+            <artifactId>httpcore</artifactId>
+            <version>4.4.11</version>
+        </dependency>
+
+        <dependency>
+            <groupId>org.apache.httpcomponents</groupId>
+            <artifactId>httpclient</artifactId>
+            <version>4.5.10</version>
+        </dependency>
+
+
         <!-- cxf start -->
         <dependency>
             <groupId>org.apache.cxf</groupId>
